ios fix for scrollbars?

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -86,30 +86,28 @@ select {
 }
 
 
-/*
-body::-webkit-scrollbar {
-    width: 1em;
+html::-webkit-scrollbar {
+    width: .8rem;
 }
-body::-webkit-scrollbar-track {
+html::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
-body::-webkit-scrollbar-thumb {
+html::-webkit-scrollbar-thumb {
   background-color: #DB2600;
   outline: 1px solid slategrey;
 }
-*/
 
 
+
+/*
 ::-webkit-scrollbar {
     width: 12px;
 }
  
-/* Track */
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
 }
  
-/* Handle */
 ::-webkit-scrollbar-thumb {
     border-radius: 0px;
     background:$primary; 
@@ -118,6 +116,7 @@ body::-webkit-scrollbar-thumb {
 ::-webkit-scrollbar-thumb:window-inactive {
 	background: rgba(255,0,0,0.4); 
 }
+*/
 
 
 
